--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,4 +1,4 @@
 writer        = file
 writer.file   = log.txt
-writer.format = {date:yyyy-MM-dd HH:mm:ss.SSS} {level}: {message}
+writer.format = {date:yyyy-MM-dd HH:mm:ss.SSS} {level}: {class}.{method}()\t{message}
 level = trace
