Update movement & logging settings

--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,4 +1,8 @@
 writer        = file
 writer.file   = log.txt
 writer.format = {date:yyyy-MM-dd HH:mm:ss.SSS} {level}: {class}.{method}()\t{message}
-level = trace
+writer.level  = trace
+
+writer1        = console
+writer1.format = {date:yyyy-MM-dd HH:mm:ss.SSS} {level}:\t{message}
+writer1.level  = trace
