--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <lwjgl.version>3.3.4</lwjgl.version>
         <imgui-java.version>1.87.7</imgui-java.version>
         <joml.version>1.10.7</joml.version>
+        <imgui.natives>natives-linux</imgui.natives>
     </properties>
 
     <profiles>
@@ -27,6 +28,7 @@
                 </os>
             </activation>
             <properties>
+                <imgui.natives>natives-linux</imgui.natives>
                 <lwjgl.natives>natives-linux</lwjgl.natives>
             </properties>
         </profile>
@@ -39,6 +41,7 @@
                 </os>
             </activation>
             <properties>
+                <imgui.natives>natives-macos</imgui.natives>
                 <lwjgl.natives>natives-macos</lwjgl.natives>
             </properties>
             <dependencies>
@@ -58,6 +61,7 @@
                 </os>
             </activation>
             <properties>
+                <imgui.natives>natives-windows</imgui.natives>
                 <lwjgl.natives>natives-windows</lwjgl.natives>
             </properties>
         </profile>
@@ -80,6 +84,12 @@
             <groupId>io.github.spair</groupId>
             <artifactId>imgui-java-binding</artifactId>
             <version>${imgui-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.spair</groupId>
+            <artifactId>imgui-java-${imgui.natives}</artifactId>
+            <version>${imgui-java.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.tinylog</groupId>
